syntax = "proto3";

option go_package = "./proto";

package proto;

service Pinger {
  rpc Ping (PingRequest) returns (PingResponse) {}
}

message PingRequest {
  string ping = 1;
}

message PingResponse {
  string pong = 1;
}